Fix modal z-index issue for mobile webkit browsers

--- a/src/layout/App/App.module.scss
+++ b/src/layout/App/App.module.scss
@@ -8,6 +8,7 @@
 
 .body {
   padding-top: $header-height-sm;
+  position: relative;
   height: 100%;
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
