--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -21,6 +21,7 @@
   box-shadow: $base-box-shadow;
   background-color: $brand-white;
   border-radius: $base-border-radius;
+  z-index: 500;
 }
 
 .iconArea {
